# sce

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
configs/: README.md  rental_poland_long.toml  rental_poland_short.toml  rental_uae_contracts.toml  sales_uae_transactions.toml
data/: download.py
data/manifests/: checksums.txt
data/parquet/: README.md  rental_poland_long.parquet  rental_poland_short.parquet
docs/: EXPERIMENTS.md  index.md
docs/api/: cleanup.md  cli.md  config.md  engine.md  importance.md  index.md  io.md  model_presets.md  pipeline.md  search.md  selection.md  stats.md
docs/figures/paper/: paper_m1_rmse_improvement_table.csv  paper_m2_feature_contributions_table.csv  paper_m3_strategy_ranking_table.csv  paper_table1_dataset_overview.csv  paper_table1_dataset_overview.tex  paper_table2_accuracy_summary.csv  paper_table2_accuracy_summary.tex
docs/getting-started/: installation.md  quickstart.md
examples/: README.md  basic_usage.py
sce/: __init__.py  cleanup.py  cli.py  config.py  engine.py  importance.py  meta.py  model_presets.py  pipeline.py  py.typed  search.py  selection.py  stats.py
sce/io/: __init__.py
scripts/: bump_version.py  download_datasets.py  generate_figures.py  generate_paper_appendix_figures.py  reporting.py  run.py
scripts/ci/: generate_docs.py  validate_metadata.py
tests/: conftest.py  test_autodocs.py  test_cleanup.py  test_config.py  test_data_integrity.py  test_engine.py  test_importance.py  test_model_presets.py  test_pipeline.py  test_stats.py
